PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/ReadOnlyPatternParameter.par
ReadOnlyPatternParameter {
var Int test = 0
reduction sum([Int] input) : Int res {
    input[INDEX]++
    res += input[INDEX]
}
seq main() : Void {
    test = 2
}
}